syntax = "proto2";

package proto.data;

import "data.encoders";
import "data.tokenizers";

message TextTokenizer {
  required string input_column = 1;
  required string output_column = 2;

  required Tokenizer tokenizer = 3;
  required TextEncoder encoder = 4;

  required bool lowercase = 5;
  required uint64 dim = 6;
}